--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "@sentry/nextjs": "^7.104.0",
         "@spotlightjs/spotlight": "^1.2.13",
         "@t3-oss/env-nextjs": "^0.9.2",
+        "atob": "^2.1.2",
+        "boom": "^7.3.0",
         "checkly": "^4.6.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -50,6 +52,7 @@
         "iron-session": "^8.0.1",
         "joi": "^17.12.2",
         "jose": "^5.2.3",
+        "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.364.0",
         "next": "^14.1.1",
         "next-intl": "^3.9.1",
