--- a/package.json
+++ b/package.json
@@ -37,17 +37,23 @@
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-scroll-area": "^1.1.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-switch": "^1.1.0",
         "@sentry/nextjs": "^7.104.0",
         "@spotlightjs/spotlight": "^1.2.13",
         "@t3-oss/env-nextjs": "^0.9.2",
+        "@tanstack/react-query": "^5.51.1",
         "atob": "^2.1.2",
         "boom": "^7.3.0",
         "checkly": "^4.6.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "dayjs": "^1.11.11",
         "drizzle-orm": "^0.29.4",
         "iron-session": "^8.0.1",
         "joi": "^17.12.2",
@@ -58,13 +64,17 @@
         "next-intl": "^3.9.1",
         "next-pwa": "^5.6.0",
         "next-sitemap": "^4.2.3",
+        "next-themes": "^0.3.0",
         "pino": "^8.19.0",
         "pino-pretty": "^10.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.2",
+        "react-icons": "^5.2.1",
         "react-query": "^3.39.3",
+        "react-resizable-panels": "^2.0.20",
         "sharp": "^0.33.2",
+        "sonner": "^1.5.0",
         "tailwind-merge": "^2.2.2",
         "zod": "^3.22.4",
         "zustand": "^4.5.2"
